objects/CM_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Booking_Conversion_Goal__c</fullName>
        <label>Booking Conversion Goal %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_Effective_Date__c</fullName>
        <label>Goal Effective Date</label>
        <type>Date</type>
    </fields>
    <label>CM Goal</label>
    <nameField>
        <displayFormat>CMG-{0000}</displayFormat>
        <label>CM Goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CM__c</columns>
        <columns>Booking_Conversion_Goal__c</columns>
        <columns>Goal_Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>